@@ -1,2 +1,0 @@
-This package contains the Python modules that allow you to use the
-Clutter toolkit in Python programs.
