@@ -1,27 +1,0 @@
-@comment $NetBSD$
-include/pyclutter-1.0/pyclutter/pyclutter.h
-lib/pkgconfig/pyclutter-0.8.pc
-${PYSITELIB}/clutter/__init__.py
-${PYSITELIB}/clutter/__init__.pyc
-${PYSITELIB}/clutter/__init__.pyo
-${PYSITELIB}/clutter/_clutter.la
-${PYSITELIB}/clutter/deprecation.py
-${PYSITELIB}/clutter/deprecation.pyc
-${PYSITELIB}/clutter/deprecation.pyo
-${PYSITELIB}/clutter/keysyms.py
-${PYSITELIB}/clutter/keysyms.pyc
-${PYSITELIB}/clutter/keysyms.pyo
-share/pyclutter/1.0/defs/clutter-base-types.defs
-share/pyclutter/1.0/defs/clutter-base.defs
-share/pyclutter/1.0/defs/clutter-types.defs
-share/pyclutter/1.0/defs/clutter.defs
-share/pyclutter/1.0/defs/cogl-base-types.defs
-share/pyclutter/1.0/defs/cogl-base.defs
-share/pyclutter/1.0/defs/cogl-types.defs
-share/pyclutter/1.0/defs/cogl.defs
-@dirrm share/pyclutter/1.0/defs
-@dirrm share/pyclutter/1.0
-@dirrm share/pyclutter
-@dirrm ${PYSITELIB}/clutter
-@dirrm include/pyclutter-1.0/pyclutter
-@dirrm include/pyclutter-1.0
